--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                     <p class="country-description">Conhecida por suas paisagens desérticas impressionantes, incluindo o deserto do Namibe e o Parque Nacional Etosha, com vida selvagem abundante.</p>
-                    <a href="Countries/Namibia.html" class="explore-btn">Explorar Namíbia</a>
+                    <a href="Countries/namibia.html" class="explore-btn">Explorar Namíbia</a>
                 </div>
             </div>
             
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                     <p class="country-description">Lar das impressionantes Cataratas Vitória, patrimônio mundial da UNESCO, e de importantes sítios arqueológicos como o Grande Zimbábue.</p>
-                    <a href="Countries/ZimbabWe.html" class="explore-btn">Explorar Zimbábue</a>
+                    <a href="Countries/zimbabwe.html" class="explore-btn">Explorar Zimbábue</a>
                 </div>
             </div>
         </div>
