--- a/Countries/namibia.html
+++ b/Countries/namibia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namíbia - Terra de Contrastes</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Descubra a Namíbia, país de paisagens deslumbrantes, vida selvagem abundante e cultura fascinante no sudoeste da África">
 </head>
@@ -280,6 +280,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="Js/script.js"></script>
 </body>
 </html>
