--- a/Countries/Angola.html
+++ b/Countries/Angola.html
@@ -304,6 +304,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="Js/script.js"></script>
 </body>
 </html>
