--- a/Countries/Mauricias.html
+++ b/Countries/Mauricias.html
@@ -242,6 +242,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="Js/script.js"></script>
 </body>
 </html>
