--- a/Countries/Tanzania.html
+++ b/Countries/Tanzania.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tanzânia - Pérola da África Oriental</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Descubra a Tanzânia, lar do Kilimanjaro, Serengeti e Zanzibar - um país de paisagens espetaculares e vida selvagem abundante">
 </head>
@@ -247,6 +247,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="Js/script.js"></script>
 </body>
 </html>
