--- a/Countries/madagascar.html
+++ b/Countries/madagascar.html
@@ -307,6 +307,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="Js/script.js"></script>
 </body>
 </html>
