--- a/Countries/malawi.html
+++ b/Countries/malawi.html
@@ -366,6 +366,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="Js/script.js"></script>
 </body>
 </html>
